--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,11 @@
     "**/*.txt"
   ],
   "dependencies": {
-    "underscore": "latest",
-    "requirejs": "latest",
-    "jquery": "latest",
-    "jquery-ui": "latest",
-    "bootstrap": "~3.1.1",
-    "socket.io-client": "~0.9.16"
+    "underscore": "~1.6.0",
+    "socket.io-client": "~1.0.6",
+    "bootstrap": "~3.2.0",
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.10.4",
+    "requirejs": "~2.1.14"
   }
 }
